--- a/index.html
+++ b/index.html
@@ -77,54 +77,54 @@
             <div class="box-content">
                 <h2>Clothes</h2>
                 <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
-                <p>See more</p>
+                <a href="https://www.amazon.com/s?i=specialty-aps&bbn=16225019011&rh=n%3A7141123011%2Cn%3A16225019011%2Cn%3A1040658&ref=nav_em__nav_desktop_sa_intl_clothing_0_2_13_2">See more</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
-                <p>See more</p>
+                <a href="https://www.amazon.com/s?i=specialty-aps&bbn=16225006011&rh=n%3A%2116225006011%2Cn%3A11060451&ref=nav_em__nav_desktop_sa_intl_skin_care_0_2_11_3">See more</a>
             </div>
         </div>
         <div class=" box"> <div class="box-content">
             <h2>Furniture</h2>
             <div class="box-img" style="background-image: url('box3_image.jpg');"></div>
-            <p>See more</p>
+            <a href="https://www.amazon.com/s?i=specialty-aps&bbn=16225011011&rh=n%3A%2116225011011%2Cn%3A1063306&ref=nav_em__nav_desktop_sa_intl_furniture_0_2_17_6">See more</a>
         </div>
     </div>
         <div class=" box">
             <div class="box-content">
-                <h2>Electrics</h2>
+                <h2>Electronics</h2>
                 <div class="box-img" style="background-image: url('box4_image.jpg');"></div>
-                <p>See more</p>
+                <a href="https://www.amazon.com/s?i=specialty-aps&bbn=16225009011&rh=n%3A%2116225009011%2Cn%3A2811119011&ref=nav_em__nav_desktop_sa_intl_cell_phones_and_accessories_0_2_5_5">See more</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-content">
                 <h2>Beauty picks</h2>
                 <div class="box-img" style="background-image: url('box5_image.jpg');"></div>
-                <p>See more</p>
+                <a href="https://www.amazon.com/s?i=specialty-aps&bbn=16225006011&rh=n%3A%2116225006011%2Cn%3A11058281&ref=nav_em__nav_desktop_sa_intl_makeup_0_2_11_2">See more</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-content">
                 <h2>Pet Care</h2>
                 <div class="box-img" style="background-image: url('box6_image.jpg');"></div>
-                <p>See more</p>
+                <a href="https://www.amazon.com/s?i=specialty-aps&bbn=16225013011&rh=n%3A%2116225013011%2Cn%3A2975312011&ref=nav_em__nav_desktop_sa_intl_dogs_0_2_21_2">See more</a>
             </div>
         </div>
         <div class=" box"> <div class="box-content">
             <h2>New Arrivals in Toys</h2>
             <div class="box-img" style="background-image: url('box7_image.jpg');"></div>
-            <p>See more</p>
+            <a href="https://www.amazon.com/s?i=specialty-aps&bbn=16225015011&rh=n%3A%2116225015011%2Cn%3A196601011&ref=nav_em__nav_desktop_sa_intl_baby_toddler_toys_0_2_25_4">See more</a>
         </div>
     </div>
         <div class=" box">
             <div class="box-content">
                 <h2>Discover Fashion Trends </h2>
                 <div class="box-img" style="background-image: url('box8_image.jpg');"></div>
-                <p>See more</p>
+                <a href="https://www.amazon.com/s?i=specialty-aps&bbn=16225018011&rh=n%3A7141123011%2Cn%3A16225018011%2Cn%3A1040660&ref=nav_em__nav_desktop_sa_intl_clothing_0_2_12_2">See more</a>
             </div>
         </div>
     </div>
@@ -137,40 +137,40 @@
         <div class="foot-panel2">
             <ul>
                 <p>Get To Know Us</p>
-                <a>Careers</a>
-                <a>Blogs</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a href="#">Careers</a>
+                <a href="#">Blogs</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Amazon Devices</a>
+                <a href="#">Amazon Science</a>
             </ul>
 
             <ul>
                 <p>Get To Know Us</p>
-                <a>Careers</a>
-                <a>Blogs</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a href="#">Careers</a>
+                <a href="#">Blogs</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Amazon Devices</a>
+                <a href="#">Amazon Science</a>
             </ul>
         
 
             <ul>
                 <p>Get To Know Us</p>
-                <a>Careers</a>
-                <a>Blogs</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a href="#">Careers</a>
+                <a href="#">Blogs</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Amazon Devices</a>
+                <a href="#">Amazon Science</a>
             </ul>
 
 
             <ul>
                 <p>Get To Know Us</p>
-                <a>Careers</a>
-                <a>Blogs</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a href="#">Careers</a>
+                <a href="#">Blogs</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Amazon Devices</a>
+                <a href="#">Amazon Science</a>
             </ul>
         </div>
 
@@ -180,9 +180,9 @@
 
         <div class="foot-panel4">
             <div class="pages">
-                <a>Conditions Of Use</a>
-                <a>Privacy Notice</a>
-                <a>Your Ads Privacy Choices</a>
+                <a href="#">Conditions Of Use</a>
+                <a href="#">Privacy Notice</a>
+                <a href="#">Your Ads Privacy Choices</a>
             </div>
 
             <div class="copyrights">
